components/markdown/tests/snapshots/codeblocks__can_add_line_numbers_with_lineno_start.snap
---
source: components/rendering/tests/codeblocks.rs
assertion_line: 240
expression: body

---
<pre data-linenos style="background-color:#2b303b;color:#c0c5ce;"><code><table><tbody><tr><td>40</td><td><span>foo
</span></td></tr><tr><td>41</td><td><span>bar
</span></td></tr></tbody></table></code></pre>

