components/markdown/tests/snapshots/codeblocks__can_highlight_at_end.snap
---
source: components/rendering/tests/codeblocks.rs
assertion_line: 124
expression: body

---
<pre style="background-color:#2b303b;color:#c0c5ce;"><code><span>foo
</span><span>bar
</span><mark style="background-color:#65737e30;"><span>bar
</span></mark><mark style="background-color:#65737e30;"><span>baz
</span></mark></code></pre>

