components/markdown/tests/snapshots/codeblocks__can_highlight_mix_line_ranges.snap
---
source: components/rendering/tests/codeblocks.rs
assertion_line: 184
expression: body

---
<pre style="background-color:#2b303b;color:#c0c5ce;"><code><mark style="background-color:#65737e30;"><span>foo
</span></mark><span>bar
</span><mark style="background-color:#65737e30;"><span>bar
</span></mark><mark style="background-color:#65737e30;"><span>baz
</span></mark></code></pre>

