components/markdown/tests/snapshots/codeblocks__can_highlight_ranges_overlap.snap
---
source: components/rendering/tests/codeblocks.rs
assertion_line: 154
expression: body

---
<pre style="background-color:#2b303b;color:#c0c5ce;"><code><mark style="background-color:#65737e30;"><span>foo
</span></mark><mark style="background-color:#65737e30;"><span>bar
</span></mark><mark style="background-color:#65737e30;"><span>bar
</span></mark><span>baz
</span></code></pre>

